@@ -5,6 +5,7 @@ Jump Start Changelog
 ------------------
 
 * **Updated Theme Blvd framework to 2.6.1**
+* New: Added option to disable theme's WooCommerce floating shopping cart; see *Appearance > Theme Options > Plugins > WooCommerce*.
 * Improvement: Better handling of pulling default value for new option, when theme options have already been saved (i.e. smoother updates when the theme adds new options, which you haven't configured).
 * Improvement: Allow unfiltered HTML when saving text and textareas.
 * Improvement: De-enqueued `theme.js`, no longer needed with framework 2.6+.
